--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "browser-sync": "^2.26.7",
     "del": "^5.0.0",
     "gulp": "^4.0.2",
-    "gulp-cssnano": "^2.1.3",
+    "gulp-csso": "^4.0.1",
     "gulp-htmlmin": "^5.0.1",
     "gulp-imagemin": "^6.0.0",
     "gulp-less": "^4.0.1",
